# NNxorFromScratch

./: Cargo.toml  README.md  iris_encoded.csv  losses.csv
.old/: neural_network.rs
.old2/: builder.rs  layer.rs  layer_builder.rs  mod.rs
src/: functions.rs  layer.rs  main.rs  metrics.rs  model.rs  workfn.rs
