[package]
name = "simple_nn"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.14.0"
rayon = "1.11.0"
ndarray = "0.16.1"
#polars = "0.42.0"
rand = "0.8.0"
ndarray-rand = "0.15.0"
ndarray-csv = "0.5.3"
csv = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
# polars = "0.51.0"
